WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291102
[iOS] UI process takes MediaPlayback assertions even when Media Capability Grants are enabled
https://bugs.webkit.org/show_bug.cgi?id=291102
Summary
[iOS] UI process takes MediaPlayback assertions even when Media Capability Gr...
Andy Estes
Reported
2025-04-04 14:01:42 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-04 14:04:45 PDT
<
rdar://problem/148619135
>
Andy Estes
Comment 2
2025-04-04 15:09:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43660
EWS
Comment 3
2025-04-06 15:53:16 PDT
Committed
293335@main
(877acfb0ac59): <
https://commits.webkit.org/293335@main
> Reviewed commits have been landed. Closing PR #43660 and removing active labels.
EWS
Comment 4
2025-05-28 14:41:44 PDT
Committed
289651.539@safari-7621-branch
(ca0b9a4a0936): <
https://commits.webkit.org/289651.539@safari-7621-branch
> Reviewed commits have been landed. Closing PR #3124 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug