[iOS] UI process takes MediaPlayback assertions even when Media Capability Grants are enabled https://bugs.webkit.org/show_bug.cgi?id=291102 rdar://problem/148619135

Reviewed by Per Arne Vollan and Eric Carlson.

WebProcessProxy::updateAudibleMediaAssertions() would take MediaPlayback assertions even in cases
where Media Capability Grants were enabled, which was duplicative and unnecessary. 276828@main
attempted to address this, but was unsuccessful since
PlatformMediaSessionManager::mediaCapabilityGrantsEnabled() only returns the correct value in the
GPU process.

Tried again to address this by removing PlatformMediaSessionManager::mediaCapabilityGrantsEnabled()
and using the value in WebPreferences / Settings / SharedPreferencesForWebProcess instead.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
  Added 'sharedPreferenceForWebProcess: true' to MediaCapabilityGrantsEnabled so that it can be
  read from the GPU process.

* Source/WebCore/Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::mediaSessionPresentingApplicationPID const):
  Changed to return an optional and renamed to clarify that this value is meant for a media session.
  When mediaCapabilityGrantsEnabled() is true for the AudioContent's page, returned std::nullopt.
(WebCore::AudioContext::presentingApplicationPID const): Deleted.
* Source/WebCore/Modules/webaudio/AudioContext.h:

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaSessionPresentingApplicationPID const):
(WebCore::HTMLMediaElement::presentingApplicationPID const): Deleted.
* Source/WebCore/html/HTMLMediaElement.h:
  Changed to return an optional and renamed to clarify that this value is meant for a media session.
  When mediaCapabilityGrantsEnabled() is true for the AudioContent's page, returned std::nullopt.

* Source/WebCore/page/Page.cpp:
(WebCore::Page::setPresentingApplicationAuditToken):
  Skipped calling PlatformMediaSessionManager::updatePresentingApplicationPIDIfNecessary() if
  mediaCapabilityGrantsEnabled() is true.

* Source/WebCore/platform/audio/PlatformMediaSession.cpp:
(WebCore::PlatformMediaSession::presentingApplicationPID const):
* Source/WebCore/platform/audio/PlatformMediaSession.h:
  Changed to return an optional and call
  PlatformMediaSessionClient::mediaSessionPresentingApplicationPID().

* Source/WebCore/platform/audio/PlatformMediaSessionManager.cpp:
(WebCore::PlatformMediaSessionManager::mediaCapabilityGrantsEnabled): Deleted.
(WebCore::PlatformMediaSessionManager::setMediaCapabilityGrantsEnabled): Deleted.
* Source/WebCore/platform/audio/PlatformMediaSessionManager.h:

* Source/WebCore/platform/audio/cocoa/MediaSessionManagerCocoa.h:
(WebCore::MediaSessionManagerCocoa::providePresentingApplicationPIDIfNecessary):
  Changed to return an optional so that providing a PID can be skipped when
  mediaCapabilityGrantsEnabled() is true.

* Source/WebCore/platform/audio/cocoa/MediaSessionManagerCocoa.mm:
(WebCore::MediaSessionManagerCocoa::prepareToSendUserMediaPermissionRequestForPage):
  Skipped calling providePresentingApplicationPIDIfNecessary() when mediaCapabilityGrantsEnabled()
  is true.

* Source/WebCore/platform/audio/ios/MediaSessionHelperIOS.mm:
(MediaSessionHelperIOS::providePresentingApplicationPID):
  Removed the call to PlatformMediaSessionManager::mediaCapabilityGrantsEnabled(); callers are now
  responsible to avoid calling this when mediaCapabilityGrantsEnabled() is true.

* Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.h:
* Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:
(WebCore::MediaSessionManageriOS::providePresentingApplicationPIDIfNecessary):
  Skipped calling MediaSessionHelper::providePresentingApplicationPID() when
  mediaCapabilityGrantsEnabled() is true.

* Source/WebKit/GPUProcess/GPUProcess.cpp:
(WebKit::GPUProcess::updateGPUProcessPreferences):
* Source/WebKit/GPUProcess/GPUProcessPreferences.cpp:
(WebKit::GPUProcessPreferences::copyEnabledWebPreferences):
* Source/WebKit/GPUProcess/GPUProcessPreferences.h:
* Source/WebKit/GPUProcess/GPUProcessPreferences.serialization.in:
  Removed GPUProcessPreferences::mediaCapabilityGrantsEnabled in favor of using
  SharedPreferencesForWebProcess.

* Source/WebKit/GPUProcess/media/RemoteAudioSessionProxyManager.cpp:
(WebKit::RemoteAudioSessionProxyManager::updatePresentingProcesses):
  Removed the call to GPUProcessPreferences::mediaCapabilityGrantsEnabled; instead, checked the
  value of mediaCapabilityGrantsEnabled on each GPUConnectionToWebProcess'
  SharedPreferencesForWebProcess and called AudioSession::setPresentingProcesses() with an array
  containing only the process tokens where mediaCapabilityGrantsEnabled is false.

* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::updateAudibleMediaAssertions):
  Removed the call to GPUProcessPreferences::mediaCapabilityGrantsEnabled;
  WebProcessProxy::updateAudibleMediaAssertions() will ensure that
  m_webProcessWithAudibleMediaCounter only has a value when there are processes where
  mediaCapabilityGrantsEnabled is false.

* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::updateAudibleMediaAssertions):
  Removed the call to GPUProcessPreferences::mediaCapabilityGrantsEnabled; instead, changed how
  hasAudibleMainPage and hasAudibleRemotePage are defined such that they are only true if a page is
  playing audio while mediaCapabilityGrantsEnabled is false.

Canonical link: https://commits.webkit.org/293335@main