Source/WebCore/html/HTMLMediaElement.cpp
@@ -9825,12 +9825,18 @@ void HTMLMediaElement::isActiveNowPlayingSessionChanged()
         page->hasActiveNowPlayingSessionChanged();
 }
 
-ProcessID HTMLMediaElement::presentingApplicationPID() const
+std::optional<ProcessID> HTMLMediaElement::mediaSessionPresentingApplicationPID() const
 {
-    if (RefPtr page = protectedDocument()->protectedPage())
-        return page->presentingApplicationPID();
+    RefPtr page = protectedDocument()->page();
+    if (!page)
+        return std::nullopt;
 
-    return { };
+#if ENABLE(EXTENSION_CAPABILITIES)
+    if (page->settings().mediaCapabilityGrantsEnabled())
+        return std::nullopt;
+#endif
+
+    return page->presentingApplicationPID();
 }
 
 #if HAVE(SPATIAL_TRACKING_LABEL)
