Source/WebCore/platform/audio/PlatformMediaSessionManager.cpp
@@ -52,10 +52,6 @@ bool PlatformMediaSessionManager::m_vp9DecoderEnabled;
 bool PlatformMediaSessionManager::m_swVPDecodersAlwaysEnabled;
 #endif
 
-#if ENABLE(EXTENSION_CAPABILITIES)
-bool PlatformMediaSessionManager::s_mediaCapabilityGrantsEnabled;
-#endif
-
 static std::unique_ptr<PlatformMediaSessionManager>& sharedPlatformMediaSessionManager()
 {
     static NeverDestroyed<std::unique_ptr<PlatformMediaSessionManager>> platformMediaSessionManager;
@@ -788,18 +784,6 @@ bool PlatformMediaSessionManager::alternateWebMPlayerEnabled()
     return false;
 #endif
 }
-
-#if ENABLE(EXTENSION_CAPABILITIES)
-bool PlatformMediaSessionManager::mediaCapabilityGrantsEnabled()
-{
-    return s_mediaCapabilityGrantsEnabled;
-}
-
-void PlatformMediaSessionManager::setMediaCapabilityGrantsEnabled(bool mediaCapabilityGrantsEnabled)
-{
-    s_mediaCapabilityGrantsEnabled = mediaCapabilityGrantsEnabled;
-}
-#endif
 
 WeakPtr<PlatformMediaSession> PlatformMediaSessionManager::bestEligibleSessionForRemoteControls(NOESCAPE const Function<bool(const PlatformMediaSession&)>& filterFunction, PlatformMediaSession::PlaybackControlsPurpose purpose)
 {
